add cloudflare tunnel authentication.

--- a/02_SCRE_Risk_Assessment.ipynb
+++ b/02_SCRE_Risk_Assessment.ipynb
@@ -12,7 +12,7 @@
         "qBMxSM8lX-PM"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOwehIOhAUVykWDw6kHKZ6p",
+      "authorship_tag": "ABX9TyOXh8gWuqo8qbtiaAUBGvfp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,7 +58,12 @@
         "import ipywidgets as widgets\n",
         "from IPython.display import display\n",
         "import csv\n",
-        "import sys"
+        "import sys\n",
+        "\n",
+        "!wget -nv https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64\n",
+        "!mv cloudflared-linux-amd64 cloudflared\n",
+        "!chmod +x ./cloudflared\n",
+        "!./cloudflared --version"
       ],
       "execution_count": null,
       "outputs": []
@@ -139,10 +144,37 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "qlCEzVGvvu6P"
+      },
+      "source": [
+        "# Cloudflare Tunnel Authentication"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "cellView": "form",
+        "id": "z-8A0HtSvpfo"
+      },
+      "source": [
+        "#@title Browser Redirction\n",
+        "from IPython.display import clear_output\n",
+        "global cf_token\n",
+        "!./cloudflared access login https://genesys.mission-aware.net\n",
+        "token = !./cloudflared access token --app=genesys.mission-aware.net\n",
+        "cf_token=token[0]\n",
+        "clear_output()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "2nytLr3v-ZQ7"
       },
       "source": [
-        "# Login"
+        "# GENESYS Authentication"
       ]
     },
     {
@@ -177,9 +209,11 @@
         "output = widgets.Output()\n",
         "display(login, output)\n",
         "\n",
-        "global headers, base_url\n",
+        "global headers, base_url, cf_token\n",
         "headers = \"\"\n",
         "base_url = \"\"\n",
+        "\n",
+        "headers = {'cf-access-token': cf_token}\n",
         "\n",
         "def on_login(b):\n",
         "  global headers, base_url\n",
@@ -189,16 +223,19 @@
         "    base_url = 'https://genesys.mission-aware.net/api/v1/'\n",
         "    # authenticate\n",
         "    payload = {'grant_type': 'password', 'username': id.value, 'password': pwd.value}\n",
-        "    r = requests.post(base_url + 'token', data=payload)\n",
+        "    r = requests.post(base_url + 'token', data=payload, \n",
+        "                      allow_redirects = False, headers=headers)\n",
         "    del payload\n",
+        "    #print(r.json())\n",
         "    if r.status_code == 200:\n",
         "      print(\"Login Success!\")\n",
         "      id.value = \"\"\n",
         "      pwd.value = \"\"\n",
         "      # save access token for future requests\n",
         "      access_token = 'bearer ' + r.json()['access_token']\n",
-        "      headers = {'Authorization': access_token}\n",
+        "      headers = {'Authorization': access_token, 'cf-access-token': cf_token}\n",
         "    else:\n",
+        "      headers = {'cf-access-token': cf_token}\n",
         "      print(\"Login Failed: \" + str(r.status_code))\n",
         "\n",
         "login.on_click(on_login)"
