chapter path fix

--- a/01_SCRE_DE_Textbook.ipynb
+++ b/01_SCRE_DE_Textbook.ipynb
@@ -8,7 +8,6 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP0fqz2BrvVBBVjOgm2KNGB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -364,7 +363,7 @@
       },
       "source": [
         "*   Mission Engineering\n",
-        "  *   (SCRE) [Operational Risk Assessment](https://github.com/tsherburne/de-textbook/blob/main/02_SCRE_Risk_Assessment.ipynb)\n",
+        "  *   (SCRE) [Operational Risk Assessment](https://colab.research.google.com/github/tsherburne/de-textbook/blob/main/02_SCRE_Risk_Assessment.ipynb)\n",
         "*   Requirements Analysis\n",
         "*   Behavior Analysis\n",
         "  *   (SCRE) [Vulnerability Assesment](https://)\n",
