add no redirect flag

--- a/02_SCRE_Risk_Assessment.ipynb
+++ b/02_SCRE_Risk_Assessment.ipynb
@@ -12,7 +12,6 @@
         "qBMxSM8lX-PM"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOXh8gWuqo8qbtiaAUBGvfp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -187,24 +186,24 @@
         "#@title Enter Credentials\n",
         "\n",
         "id = widgets.Text(\n",
-        "    value='',\n",
-        "    placeholder='Enter username',\n",
-        "    description='User Name:',\n",
-        "    disabled=False\n",
+        "  value='',\n",
+        "  placeholder='Enter username',\n",
+        "  description='User Name:',\n",
+        "  disabled=False\n",
         ")\n",
         "pwd = widgets.Password(\n",
-        "    value='',\n",
-        "    placeholder='Enter password',\n",
-        "    description='Password:',\n",
-        "    disabled=False\n",
+        "  value='',\n",
+        "  placeholder='Enter password',\n",
+        "  description='Password:',\n",
+        "  disabled=False\n",
         ")\n",
         "display(id)\n",
         "display(pwd)\n",
         "\n",
         "login = widgets.Button(\n",
-        "    description=\"Login\", \n",
-        "    tooltip=\"Enter User Name and Password - then click to Login.\",\n",
-        "    button_style='success'\n",
+        "  description=\"Login\", \n",
+        "  tooltip=\"Enter User Name and Password - then click to Login.\",\n",
+        "  button_style='success'\n",
         ")\n",
         "output = widgets.Output()\n",
         "display(login, output)\n",
@@ -224,7 +223,7 @@
         "    # authenticate\n",
         "    payload = {'grant_type': 'password', 'username': id.value, 'password': pwd.value}\n",
         "    r = requests.post(base_url + 'token', data=payload, \n",
-        "                      allow_redirects = False, headers=headers)\n",
+        "                      allow_redirects=False, headers=headers)\n",
         "    del payload\n",
         "    #print(r.json())\n",
         "    if r.status_code == 200:\n",
@@ -255,7 +254,7 @@
         "projectList = []\n",
         "projectDict = {}\n",
         "\n",
-        "r = requests.get(base_url + 'projects', headers=headers)\n",
+        "r = requests.get(base_url + 'projects', allow_redirects=False, headers=headers)\n",
         "if r.status_code == 200:\n",
         "  projects = r.json()['results']\n",
         "  \n",
@@ -491,7 +490,8 @@
         "r = requests.get(base_url + 'projects/' + projectDict[proj.value] + \n",
         "            '/entities/' + catId + \n",
         "            '/relationshiptargets/' + relationDict['categorizes'] +\n",
-        "            '?sortBlockId=' + sortBlockDict['Numeric'], headers=headers)\n",
+        "            '?sortBlockId=' + sortBlockDict['Numeric'], \n",
+        "            allow_redirects=False, headers=headers)\n",
         "if r.status_code != 200:\n",
         "  sys.exit(\"Failed to fetch categorized control actions: \" + str(r.status_code))\n",
         "\n",
@@ -535,7 +535,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "cellView": "form",
         "id": "TLqubjSL2sad"
       },
       "source": [
@@ -562,7 +561,7 @@
         "# fetch losses\n",
         "r = requests.get(base_url + 'projects/' + projectDict[proj.value] + \n",
         "                 '/folders/' + folderDict['Loss'] + '/entities?sortBlockId=' + \n",
-        "                 sortBlockDict['Numeric'], headers=headers)\n",
+        "                 sortBlockDict['Numeric'], allow_redirects=False, headers=headers)\n",
         "\n",
         "if r.status_code == 200:\n",
         "  with open('losses.csv', 'w', newline='') as f:\n",
@@ -594,7 +593,8 @@
         "      r2 = requests.get(base_url + 'projects/' + projectDict[proj.value] + \n",
         "                 '/entities/' + loss['id'] + \n",
         "                 '/relationshiptargets/' + relationDict['ma: is caused by'] +\n",
-        "                 '?sortBlockId=' + sortBlockDict['Numeric'], headers=headers)\n",
+        "                 '?sortBlockId=' + sortBlockDict['Numeric'], \n",
+        "                 allow_redirects=False, headers=headers)\n",
         "      if r2.status_code == 200:\n",
         "        hazards = r2.json()['results']\n",
         "        first = True\n",
@@ -636,7 +636,8 @@
         "# fetch hazards\n",
         "r = requests.get(base_url + 'projects/' + projectDict[proj.value] + \n",
         "                 '/folders/' + folderDict['Hazard'] + '/entities?sortBlockId=' + \n",
-        "                 sortBlockDict['Numeric'], headers=headers)\n",
+        "                 sortBlockDict['Numeric'], \n",
+        "                 allow_redirects=False, headers=headers)\n",
         "\n",
         "if r.status_code == 200:\n",
         "  with open('hazards.csv', 'w', newline='') as f:\n",
@@ -664,7 +665,8 @@
         "      r2 = requests.get(base_url + 'projects/' + projectDict[proj.value] + \n",
         "                 '/entities/' + hazard['id'] + \n",
         "                 '/relationshiptargets/' + relationDict['ma: leads to'] +\n",
-        "                 '?sortBlockId=' + sortBlockDict['Numeric'], headers=headers)\n",
+        "                 '?sortBlockId=' + sortBlockDict['Numeric'], \n",
+        "                 allow_redirects=False, headers=headers)\n",
         "      if r2.status_code == 200:\n",
         "        losses = r2.json()['results']\n",
         "        first = True\n",
@@ -687,7 +689,8 @@
         "      r2 = requests.get(base_url + 'projects/' + projectDict[proj.value] + \n",
         "                 '/entities/' + hazard['id'] + \n",
         "                 '/relationshiptargets/' + relationDict['ma: is caused by'] +\n",
-        "                 '?sortBlockId=' + sortBlockDict['Numeric'], headers=headers)\n",
+        "                 '?sortBlockId=' + sortBlockDict['Numeric'], \n",
+        "                 allow_redirects=False, headers=headers)\n",
         "      if r2.status_code == 200:\n",
         "        hcas = r2.json()['results']\n",
         "        first = True\n",
@@ -739,7 +742,8 @@
         "# fetch hca\n",
         "r = requests.get(base_url + 'projects/' + projectDict[proj.value] + \n",
         "                 '/folders/' + folderDict['HazardousAction'] + '/entities?sortBlockId=' + \n",
-        "                 sortBlockDict['Numeric'], headers=headers)\n",
+        "                 sortBlockDict['Numeric'], \n",
+        "                 allow_redirects=False, headers=headers)\n",
         "caVariationDict = {}\n",
         "hazardousCAList = []\n",
         "\n",
@@ -775,7 +779,8 @@
         "      r2 = requests.get(base_url + 'projects/' + projectDict[proj.value] + \n",
         "                 '/entities/' + hca['id'] + \n",
         "                 '/relationshiptargets/' + relationDict['ma: leads to'] +\n",
-        "                 '?sortBlockId=' + sortBlockDict['Numeric'], headers=headers)\n",
+        "                 '?sortBlockId=' + sortBlockDict['Numeric'], \n",
+        "                 allow_redirects=False, headers=headers)\n",
         "      if r2.status_code == 200:\n",
         "        hazards = r2.json()['results']\n",
         "        first = True\n",
@@ -798,7 +803,8 @@
         "      r2 = requests.get(base_url + 'projects/' + projectDict[proj.value] + \n",
         "                 '/entities/' + hca['id'] + \n",
         "                 '/relationshiptargets/' + relationDict['ma: variation of'] +\n",
-        "                 '?sortBlockId=' + sortBlockDict['Numeric'], headers=headers)\n",
+        "                 '?sortBlockId=' + sortBlockDict['Numeric'], \n",
+        "                 allow_redirects=False, headers=headers)\n",
         "      if r2.status_code == 200:\n",
         "        controlActions = r2.json()['results']\n",
         "        first = True\n",
