add systems engineering v

--- a/01_SCRE_DE_Textbook.ipynb
+++ b/01_SCRE_DE_Textbook.ipynb
@@ -350,9 +350,9 @@
         "id": "uQRsFzEA65oR"
       },
       "source": [
-        "# DE Textbook Table of Contents\n",
+        "# DE System-Engineering-V Chapter Links\n",
         "\n",
-        "\n",
+        "> <img src=\"https://raw.githubusercontent.com/tsherburne/de-textbook/main/images/systems-engineering-v.png\" height=\"300\" />\n",
         "\n"
       ]
     },
