--- a/02_SCRE_Risk_Assessment.ipynb
+++ b/02_SCRE_Risk_Assessment.ipynb
@@ -81,6 +81,8 @@
         "attributeDict['variationType'] = 'a00302c6-3a7f-40e6-b382-88ab33cacca9'\n",
         "attributeDict['component:title'] ='e70c8e32-8ed9-4c69-93d1-ec873ae22e8a'\n",
         "attributeDict['ca:title'] ='2a855444-2ddb-42a1-a04f-625f120cec26'\n",
+        "attributeDict['note:status'] = '5b268627-f078-464e-8a12-f13cd8eee5f2'\n",
+        "attributeDict['note:decision'] = 'd66bbaec-817e-469e-a3b3-354b6e9a2a08'\n",
         "\n",
         "sortBlockDict = {}\n",
         "sortBlockDict['Numeric'] = '78b85fc0-3aec-442d-95b9-2b291bd4d1bc'\n",
@@ -115,7 +117,8 @@
         "  # fetch categories\n",
         "  r = requests.get(base_url + 'projects/' + projectDict[proj.value] + \n",
         "                 '/entities/byclass/' + entityDict['Category'] + '?sortBlockId=' + \n",
-        "                 sortBlockDict['Numeric'], headers=headers)\n",
+        "                 sortBlockDict['Numeric'], \n",
+        "                 allow_redirects=False, headers=headers)\n",
         "  catId = \"\"\n",
         "  if r.status_code == 200:\n",
         "    categories = r.json()['results']\n",
@@ -535,7 +538,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "TLqubjSL2sad"
+        "id": "TLqubjSL2sad",
+        "cellView": "form"
       },
       "source": [
         "#@title MBSE ***Operational Risk Assesment*** Entities & Relationships\n",
@@ -906,10 +910,120 @@
         "    flex_flow='column',\n",
         "    border='solid 2px',\n",
         "    align_items='stretch',\n",
-        "    width='30%'\n",
+        "    width='40%'\n",
         "))\n",
         "form"
       ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Exercises"
+      ],
+      "metadata": {
+        "id": "dUqM80mny9lO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@title Operational Risk Assesment Questions\n",
+        "status, catId = getCategoryId(\"EX: Risk Assessment\")\n",
+        "if status != 200:\n",
+        "  sys.exit(\"Failed to fetch risk assesment category: \" + str(status))\n",
+        "\n",
+        "# fetch 'categorized' exercises\n",
+        "r = requests.get(base_url + 'projects/' + projectDict[proj.value] + \n",
+        "            '/entities/' + catId + \n",
+        "            '/relationshiptargets/' + relationDict['categorizes'] +\n",
+        "            '?sortBlockId=' + sortBlockDict['Numeric'], \n",
+        "            allow_redirects=False, headers=headers)\n",
+        "if r.status_code != 200:\n",
+        "  sys.exit(\"Failed to fetch categorized Exercises: \" + str(r.status_code))\n",
+        "\n",
+        "exList = []\n",
+        "with open('ex.csv', 'w', newline='') as f:\n",
+        "  # create the csv writer\n",
+        "  writer = csv.writer(f)\n",
+        "  header = ['Title', 'Description', 'Status', 'Decision']\n",
+        "  writer.writerow(header)\n",
+        "\n",
+        "  # collect all exercises\n",
+        "  exercises = r.json()['results']\n",
+        "  for exercise in exercises:\n",
+        "    exTitle = \"\"\n",
+        "    exDescription = \"\"\n",
+        "    exStatus = \" \"\n",
+        "    exDecision = \" \"\n",
+        "    for attr in exercise['attributes']:\n",
+        "      if attr['definitionId'] == attributeDict['name']:\n",
+        "        if attr['value'] is not None:\n",
+        "          exTitle = attr['value']['value']\n",
+        "          exList.append(exTitle)\n",
+        "      if attr['definitionId'] == attributeDict['description']:\n",
+        "        if attr['value'] is not None:\n",
+        "          exDescription = attr['value']['value']['plainText']\n",
+        "      if attr['definitionId'] == attributeDict['note:status']:\n",
+        "        if attr['value'] is not None:\n",
+        "          exStatus = attr['value']['value']['value']\n",
+        "      if attr['definitionId'] == attributeDict['note:decision']:\n",
+        "        if attr['value'] is not None:\n",
+        "          exDecision = attr['value']['value']['plainText']\n",
+        "    # write csv row\n",
+        "    writer.writerow([exTitle, exDescription, exStatus, exDecision])\n",
+        "exList.sort()\n",
+        "data_table.DataTable(pd.read_csv('ex.csv'), include_index=False)"
+      ],
+      "metadata": {
+        "id": "7oHALC2Q9zJL",
+        "cellView": "form"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@title Response Editor\n",
+        "from ipywidgets import Layout, Button, Box, FloatText, Textarea, Dropdown, Label, IntSlider\n",
+        "\n",
+        "form_item_layout = Layout(\n",
+        "    display='flex',\n",
+        "    flex_flow='row',\n",
+        "    justify_content='space-between'\n",
+        ")\n",
+        "\n",
+        "def on_save(b):\n",
+        "  print(\"Saving....\")\n",
+        "\n",
+        "save = Button(description='Save', button_style='success')\n",
+        "save.on_click(on_save)\n",
+        "\n",
+        "form_items = [\n",
+        "    Box([Label(value='Title:'),\n",
+        "         Dropdown(options=exList)], layout=form_item_layout),\n",
+        "    Box([Label(value='Status:'),\n",
+        "         Dropdown(options=['Open', 'Closed'])], layout=form_item_layout),\n",
+        "    Box([Label(value='Decision:'),\n",
+        "         Textarea()], layout=form_item_layout),\n",
+        "    Box([Label(value='Operation:'),\n",
+        "        save], layout=form_item_layout)\n",
+        "]\n",
+        "form = Box(form_items, layout=Layout(\n",
+        "    display='flex',\n",
+        "    flex_flow='column',\n",
+        "    border='solid 2px',\n",
+        "    align_items='stretch',\n",
+        "    width='40%'\n",
+        "))\n",
+        "form"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "0lFp5hUyD8-T"
+      },
       "execution_count": null,
       "outputs": []
     }
