handle blank decision

--- a/02_SCRE_Risk_Assessment.ipynb
+++ b/02_SCRE_Risk_Assessment.ipynb
@@ -847,6 +847,8 @@
         "      if attr['definitionId'] == attributeDict['note:decision']:\n",
         "        if attr['value'] is not None:\n",
         "          exDecision = attr['value']['value']['plainText']\n",
+        "          if len(exDecision) == 0:\n",
+        "            exDecision = \" \"\n",
         "    exDict[exTitle] = exEntry\n",
         "    # write csv row\n",
         "    writer.writerow([exTitle, exDescription, exStatus, exDecision])\n",
