mbse images in text frame

--- a/02_SCRE_Risk_Assessment.ipynb
+++ b/02_SCRE_Risk_Assessment.ipynb
@@ -362,22 +362,14 @@
         "A ***hierarchical control structure*** is a system \n",
         "model that is composed of feedback control loops. An effective \n",
         "control structure will enforce constraints on the behavior of the \n",
-        "overall system."
+        "overall system.\n",
+        "\n",
+        "----\n",
+        "\n",
+        "### MBSE ***Control Structure*** Entities & Relationships\n",
+        "\n",
+        "> <img src=\"https://raw.githubusercontent.com/tsherburne/de-textbook/main/images/mission-aware-mbse-control-structure.png\" height=\"175\" />"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "cellView": "form",
-        "id": "-gHZu9m9xtFa"
-      },
-      "source": [
-        "#@title MBSE ***Control Structure*** Entities & Relationships\n",
-        "from IPython.display import Image\n",
-        "Image(height=175, url='https://raw.githubusercontent.com/tsherburne/de-textbook/main/images/mission-aware-mbse-control-structure.png')"
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -448,22 +440,13 @@
         "id": "MIcVtyIXAKQv"
       },
       "source": [
-        "## STPA Losses, Hazards, & Hazardous Control Actions"
+        "## STPA Losses, Hazards, & Hazardous Control Actions\n",
+        "\n",
+        "--- \n",
+        "### MBSE ***Operational Risk Assesment*** Entities & Relationships\n",
+        "\n",
+        "> <img src=\"https://raw.githubusercontent.com/tsherburne/de-textbook/main/images/mission-aware-ma-mbse-risk-assesment.png\" height=\"200\" />"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "TLqubjSL2sad",
-        "cellView": "form"
-      },
-      "source": [
-        "#@title MBSE ***Operational Risk Assesment*** Entities & Relationships\n",
-        "from IPython.display import Image\n",
-        "Image(height=200, url='https://raw.githubusercontent.com/tsherburne/de-textbook/main/images/mission-aware-ma-mbse-risk-assesment.png')"
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -853,8 +836,8 @@
         "    # write csv row\n",
         "    writer.writerow([exTitle, exDescription, exStatus, exDecision])\n",
         "exList.sort()\n",
-        "data_table.DataTable(pd.read_csv('ex.csv'), include_index=False)\n",
-        "\n"
+        "ex_table=data_table.DataTable(pd.read_csv('ex.csv'), include_index=False)\n",
+        "display(ex_table)"
       ],
       "metadata": {
         "id": "7oHALC2Q9zJL",
@@ -927,11 +910,11 @@
         "    align_items='stretch',\n",
         "    width='40%'\n",
         "))\n",
-        "form"
+        "display(form)"
       ],
       "metadata": {
-        "cellView": "form",
-        "id": "0lFp5hUyD8-T"
+        "id": "0lFp5hUyD8-T",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
