--- a/01_SCRE_DE_Textbook.ipynb
+++ b/01_SCRE_DE_Textbook.ipynb
@@ -344,7 +344,7 @@
         "  * (SCRE) [Operational Risk Assessment](https://colab.research.google.com/github/tsherburne/de-textbook/blob/main/02_SCRE_Risk_Assessment.ipynb)\n",
         "* Requirements Analysis\n",
         "* Behavior Analysis\n",
-        "  * (SCRE) [Vulnerability Assessment](https://)\n",
+        "  * (SCRE) [Vulnerability Assessment](https://colab.research.google.com/github/tsherburne/de-textbook/blob/main/03_SCRE_Vulnerability_Assessment.ipynb)\n",
         "* System Architecture\n",
         "  * (SCRE) [Resilience Architecture](https://)\n",
         "* Verification and Validation\n",
