add project db. add system description nb.

--- a/01_SCRE_DE_Textbook.ipynb
+++ b/01_SCRE_DE_Textbook.ipynb
@@ -340,11 +340,13 @@
         "id": "CGZ4LU7t8DZt"
       },
       "source": [
+        "* Concept of Operations\n",
+        "  * (SCRE) [System Description](https://colab.research.google.com/github/tsherburne/de-textbook/blob/main/02_SCRE_System_Description.ipynb)\n",
         "* Mission Engineering\n",
-        "  * (SCRE) [Operational Risk Assessment](https://colab.research.google.com/github/tsherburne/de-textbook/blob/main/02_SCRE_Risk_Assessment.ipynb)\n",
+        "  * (SCRE) [Operational Risk Assessment](https://colab.research.google.com/github/tsherburne/de-textbook/blob/main/03_SCRE_Risk_Assessment.ipynb)\n",
         "* Requirements Analysis\n",
         "* Behavior Analysis\n",
-        "  * (SCRE) [Vulnerability Assessment](https://colab.research.google.com/github/tsherburne/de-textbook/blob/main/03_SCRE_Vulnerability_Assessment.ipynb)\n",
+        "  * (SCRE) [Vulnerability Assessment](https://colab.research.google.com/github/tsherburne/de-textbook/blob/main/04_SCRE_Vulnerability_Assessment.ipynb)\n",
         "* System Architecture\n",
         "  * (SCRE) [Resilience Architecture](https://)\n",
         "* Verification and Validation\n",
