--- a/03_SCRE_Risk_Assessment.ipynb
+++ b/03_SCRE_Risk_Assessment.ipynb
@@ -26,7 +26,7 @@
       "metadata": {
         "cellView": "form",
         "id": "yanj4hCUW50S",
-        "tags": []
+        "s": []
       },
       "outputs": [],
       "source": [
@@ -75,84 +75,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "cellView": "form",
-        "id": "2_YfDlzb77VI"
-      },
-      "outputs": [],
-      "source": [
-        "#@title Generate Control Structure\n",
-        "cs = manb.ControlStructure(env)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "kyEihrbA_1z5"
-      },
-      "source": [
-        "## Control Structure Diagram\n",
-        "\n",
-        "A ***hierarchical control structure*** is a system \n",
-        "model that is composed of feedback control loops. An effective \n",
-        "control structure will enforce constraints on the behavior of the \n",
-        "overall system.\n",
-        "\n",
-        "----\n",
-        "\n",
-        "### MBSE ***Control Structure*** Entities & Relationships\n",
-        "\n",
-        "> <img src=\"https://raw.githubusercontent.com/tsherburne/de-textbook/main/images/mission-aware-mbse-control-structure.png\" height=\"175\" />"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "----\n",
-        "\n",
-        "| Entity | Description |\n",
-        "| :---   | :----       | \n",
-        "| Control Action | A controller provides control actions to control some process and to enforce constraints on the behavior of the <br> controlled process.|\n",
-        "| Component | A component is an abstract term that represents the physical or logical entity that performs a specific function <br> or functions.|\n",
-        "| Feedback | Process models may be updated in part by feedback used to observe the controlled process.|\n",
-        "| Function | A function is a transformation that accepts one or more inputs (items) and transforms them into outputs (items).|\n",
-        "| Item | An item represent flows within and between functions. An item is an input to or an output from a function.|\n",
-        "| Use Case | A use case identifies a piece of the functionality of a system in terms of how the users use the system to <br> achieve their goals (mission). Use cases are high-level descriptions of behavior under a specific set of conditions. <br>These high-level descriptions can then be elaborated to define the system behavior.|\n",
-        "\n",
-        "----"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "cellView": "form",
-        "id": "Hwqcj_NLF7b6",
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "#@title System ***Context*** & ***Control Structure*** Diagram\n",
-        "cs.Diagram()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "cellView": "form",
-        "id": "MKYtNVTJ77VL"
-      },
-      "outputs": [],
-      "source": [
-        "#@title System ***Control Actions***\n",
-        "cs.ControlActionTable()"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "MIcVtyIXAKQv"
@@ -176,7 +98,7 @@
       "outputs": [],
       "source": [
         "#@title Initialize Risk Assessment\n",
-        "ra = manb.RiskAssessment(env, cs)"
+        "ra = manb.RiskAssessment(env)"
       ]
     },
     {
