--- a/02_SCRE_System_Description.ipynb
+++ b/02_SCRE_System_Description.ipynb
@@ -213,9 +213,10 @@
     },
     "orig_nbformat": 4,
     "colab": {
-      "name": "Copy of 02_SCRE_System_Description.ipynb",
+      "name": "02_SCRE_System_Description.ipynb",
       "provenance": [],
       "toc_visible": true,
+      "collapsed_sections": [],
       "include_colab_link": true
     }
   },
