--- a/03_SCRE_Risk_Assessment.ipynb
+++ b/03_SCRE_Risk_Assessment.ipynb
@@ -3,11 +3,11 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/tsherburne/de-textbook/blob/main/02_SCRE_Risk_Assessment.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/tsherburne/de-textbook/blob/main/03_SCRE_Risk_Assessment.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -207,14 +207,12 @@
   ],
   "metadata": {
     "colab": {
-      "collapsed_sections": [
-        "nmNC_z4WYSDP"
-      ],
-      "include_colab_link": true,
-      "name": "02_SCRE_Risk_Assessment.ipynb",
+      "collapsed_sections": [],
+      "name": "03_SCRE_Risk_Assessment.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "toc_visible": true
+      "toc_visible": true,
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
