--- a/02_SCRE_System_Description.ipynb
+++ b/02_SCRE_System_Description.ipynb
@@ -3,11 +3,21 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/tsherburne/de-textbook/blob/main/02_SCRE_System_Description.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "%load_ext autoreload\n",
+        "%autoreload 2"
       ]
     },
     {
@@ -191,6 +201,13 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "collapsed_sections": [],
+      "include_colab_link": true,
+      "name": "02_SCRE_System_Description.ipynb",
+      "provenance": [],
+      "toc_visible": true
+    },
     "interpreter": {
       "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
     },
@@ -211,14 +228,7 @@
       "pygments_lexer": "ipython3",
       "version": "3.8.10"
     },
-    "orig_nbformat": 4,
-    "colab": {
-      "name": "02_SCRE_System_Description.ipynb",
-      "provenance": [],
-      "toc_visible": true,
-      "collapsed_sections": [],
-      "include_colab_link": true
-    }
+    "orig_nbformat": 4
   },
   "nbformat": 4,
   "nbformat_minor": 0
