loss scenario assessment tables

--- a/02_SCRE_System_Description.ipynb
+++ b/02_SCRE_System_Description.ipynb
@@ -11,16 +11,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "%load_ext autoreload\n",
-        "%autoreload 2"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "apOh50Mu3aMi"
@@ -68,7 +58,7 @@
       },
       "outputs": [],
       "source": [
-        "#@title GENESY Login & Project Selection\n",
+        "#@title GENESYS Login & Project Selection\n",
         "env.Login()"
       ]
     },
