--- a/01_SCRE_DE_Textbook.ipynb
+++ b/01_SCRE_DE_Textbook.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/tsherburne/de-textbook/blob/main/01_SCRE_DE_Textbook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -348,7 +348,7 @@
         "* Behavior Analysis\n",
         "  * (SCRE) [Vulnerability Assessment](https://colab.research.google.com/github/tsherburne/de-textbook/blob/main/04_SCRE_Vulnerability_Assessment.ipynb)\n",
         "* System Architecture\n",
-        "  * (SCRE) [Resilience Architecture](https://)\n",
+        "  * (SCRE) [Resilience Architecture](https://colab.research.google.com/github/tsherburne/de-textbook/blob/main/05_SCRE_Resilience_Architecture.ipynb)\n",
         "* Verification and Validation\n",
         "  * (SCRE) [Resilience Design Validation](https://)\n",
         "  * (SCRE) [Test Support System](https://)"
@@ -358,11 +358,11 @@
   "metadata": {
     "colab": {
       "collapsed_sections": [],
+      "include_colab_link": true,
       "name": "01_SCRE_DE_Textbook.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "toc_visible": true,
-      "include_colab_link": true
+      "toc_visible": true
     },
     "kernelspec": {
       "display_name": "Python 3",
