--- a/03_SCRE_Risk_Assessment.ipynb
+++ b/03_SCRE_Risk_Assessment.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/tsherburne/de-textbook/blob/main/03_SCRE_Risk_Assessment.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -60,7 +60,7 @@
       },
       "outputs": [],
       "source": [
-        "#@title GENESY Login & Project Selection\n",
+        "#@title GENESYS Login & Project Selection\n",
         "env.Login()"
       ]
     },
@@ -208,11 +208,11 @@
   "metadata": {
     "colab": {
       "collapsed_sections": [],
+      "include_colab_link": true,
       "name": "03_SCRE_Risk_Assessment.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "toc_visible": true,
-      "include_colab_link": true
+      "toc_visible": true
     },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
