add meta-model extensions. add pipeline case study

--- a/01_SCRE_DE_Textbook.ipynb
+++ b/01_SCRE_DE_Textbook.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/tsherburne/de-textbook/blob/main/01_SCRE_DE_Textbook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -97,6 +97,16 @@
         "\n",
         "----"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Digital Engineering MBSE Meta-Model Extensions\n",
+        "> <img src=\"https://raw.githubusercontent.com/tsherburne/de-textbook/main/images/digital-engineering-meta-model-extensions.png\" height=\"600\" />"
+      ],
+      "metadata": {
+        "id": "Ipo1gk0rNEWr"
+      }
     },
     {
       "cell_type": "markdown",
@@ -324,6 +334,51 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "# Pipeline Case-Study Conops"
+      ],
+      "metadata": {
+        "id": "S26Hf0TBOn92"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "[Overview Description](https://en.wikipedia.org/wiki/Pipeline_transport#Oil_and_natural_gas)\n",
+        "\n",
+        "> <img src=\"https://upload.wikimedia.org/wikipedia/en/4/46/Pipeline-Scada.jpg\" height=\"400\"/>"
+      ],
+      "metadata": {
+        "id": "9jBXI3ELOMtI"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* Field devices are instrumentation, data gathering units and communication systems. The field instrumentation includes ***flow***, ***pressure***, and ***temperature*** gauges/transmitters, and other devices to measure the relevant data required. These instruments are installed along the pipeline on some specific locations, such as injection or delivery stations, pump stations (liquid pipelines) or compressor stations (gas pipelines), and block valve stations.\n",
+        "\n",
+        "* The information measured by these field instruments is then gathered in local ***remote terminal units*** (RTU) that transfer the field data to a central location in real time using communication systems, such as satellite channels, microwave links, or cellular phone connections.\n",
+        "\n",
+        "* Pipelines are controlled and operated remotely, from what is usually known as the \"Main Control Room\". In this center, all the data related to field measurement is consolidated in one central database. The data is received from multiple RTUs along the pipeline. It is common to find RTUs installed at every station along the pipeline.\n",
+        "\n",
+        "* The SCADA system at the Main Control Room receives all the field data and presents it to the pipeline operator through a set of screens or Human Machine Interface, showing the operational conditions of the pipeline. The operator can monitor the hydraulic conditions of the line, as well as send ***operational commands*** (open/close valves, turn on/off compressors or pumps, change setpoints, etc.) through the SCADA system to the field.\n",
+        "\n",
+        "* To optimize and secure the operation of these assets, some pipeline companies are using what is called \"Advanced Pipeline Applications\", which are software tools installed on top of the SCADA system, that provide extended functionality to perform leak detection, leak location, batch tracking (liquid lines), [pig tracking](https://en.wikipedia.org/wiki/Pigging), composition tracking, predictive modeling, look ahead modeling, and operator training.\n",
+        "\n",
+        "| Station Type | Description |\n",
+        "| :---         | :----       |\n",
+        "|Inlet Station | Known also as \"supply\" or \"inlet\" station, is the beginning of the system, where the product is injected into the line. <br> Storage facilities, pumps or compressors are usually located at these locations. |\n",
+        "| Outlet Station | Known also as \"outlet\" stations or terminals, this is where the product will be distributed to the consumer. <br> It could be a tank terminal for liquid pipelines or a connection to a distribution network for gas pipelines.  | \n",
+        "| Pump Station |  Pumps for liquid pipelines and compressors for gas pipelines, are located along the line to move the product through <br> the pipeline. The location of these stations is defined by the topography of the terrain, the type of product <br> being transported, or operational conditions of the network. | \n",
+        "| Valve Station | These are the first line of protection for pipelines. With these valves the operator can isolate any segment of the line <br> for maintenance work or isolate a rupture or leak. Block valve stations are usually located every 20 to 30 miles, <br> depending on the type of pipeline. Even though it is not a design rule, it is a very usual practice in liquid pipelines. <br> The location of these stations depends exclusively on the nature of the product being transported, the trajectory <br> of the pipeline and/or the operational conditions of the line.  | "
+      ],
+      "metadata": {
+        "id": "04sTbg-sOXjp"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "uQRsFzEA65oR"
       },
@@ -357,12 +412,15 @@
   ],
   "metadata": {
     "colab": {
-      "collapsed_sections": [],
-      "include_colab_link": true,
+      "collapsed_sections": [
+        "KWIkt5qn30EB",
+        "9jBXI3ELOMtI"
+      ],
       "name": "01_SCRE_DE_Textbook.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "toc_visible": true
+      "toc_visible": true,
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
